substrate/frame/support/test/tests/pallet_ui/authorize_wrong_closure_6.stderr
error[E0631]: type mismatch in function arguments
  --> tests/pallet_ui/authorize_wrong_closure_6.rs:36:23
   |
36 |         #[pallet::authorize(Pallet::<T>::authorize_call1)]
   |                             ^^^^^^----------------------
   |                             |
   |                             expected due to this
   |                             return type was inferred to be `fn(TransactionSource, u32) -> Result<(ValidTransaction, Weight), ...> {...::authorize_call1}` here
...
48 |         fn authorize_call1(_source: TransactionSource, _a: u32) -> TransactionValidityWithRefund {
   |         ---------------------------------------------------------------------------------------- found signature defined here
   |
   = note: expected function signature `for<'a> fn(frame_support::pallet_prelude::TransactionSource, &'a _) -> _`
              found function signature `fn(frame_support::pallet_prelude::TransactionSource, _) -> _`
   = note: the full name for the type has been written to '$WORKSPACE/target/tests/trybuild/x86_64-unknown-linux-gnu/debug/deps/$CRATE-a5d38637172660dc.long-type-4183595103124166336.txt'
   = note: consider using `--verbose` to print the full type name to the console
help: consider adjusting the signature so it borrows its argument
   |
48 |         fn authorize_call1(_source: TransactionSource, _a: &u32) -> TransactionValidityWithRefund {
   |                                                            +
